objects/Direct_SAV_SuperGroup_Rel__c.object
<CustomObject>
    <fields>
        <fullName>Account_Group_ID__c</fullName>
        <description>SAV id in SAVM</description>
        <label>SAVM Group ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Group__c</fullName>
        <description>Master Detail Field relating to SalesAccountView Object</description>
        <label>SalesAccountView</label>
        <referenceTo>Account_Group__c</referenceTo>
        <relationshipLabel>Super Group</relationshipLabel>
        <relationshipName>Direct_SAV_Super_Group_Relationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Indicates whether the Group - Group Detail - Rule - Site Target ID combination is active or not (This flag is FDEV oriented)</description>
        <label>Group Detail Status</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Super_Group_ID__c</fullName>
        <description>Super Group ID IN SAVM</description>
        <label>SAVM Super Group ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Super_Group__c</fullName>
        <description>Master Detail Field relating to Super Group Object</description>
        <label>Super Group</label>
        <referenceTo>Super_Group__c</referenceTo>
        <relationshipLabel>SalesAccount</relationshipLabel>
        <relationshipName>Direct_SAV_Super_Group_Relationships</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <description>This object is to create many to many relationship between Direct Super Group Object and FDEV Account Group object</description>
    <label>Direct SAV Super Group Relationship</label>
    <nameField>
        <displayFormat>DSSGR-{0}</displayFormat>
        <label>Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Direct SAV Super Group Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>